owner UI: prevent clipping of application list with announcement
Prevent clipping of the last application listing when an announcement
is active on Manage workspaces tab on owner UI.

--- a/src/app/components/main-page/main-workspace-owner/main-workspace-owner.component.scss
+++ b/src/app/components/main-page/main-workspace-owner/main-workspace-owner.component.scss
@@ -138,7 +138,7 @@
     background: #acb0e0;
     border: 5px solid map-get($app-primary, 400);
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
 
     ::ng-deep app-service-announcement {
       background-color: #acb0e0;
@@ -186,11 +186,6 @@
           color: white;
         }
       }
-    }
-
-    .mat-tab-group {
-      min-height: calc(100vh - 10px);
-      height: calc(100vh - 10px);
     }
 
     ::ng-deep .mat-tab-header {
